# serializer version: 1
# name: test_sensors[sensor.test_user_class-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'warrior',
        'rogue',
        'wizard',
        'healer',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_class',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Class',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.CLASS: 'class'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_class',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_user_class-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'test-user Class',
      'options': list([
        'warrior',
        'rogue',
        'wizard',
        'healer',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_class',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'wizard',
  })
# ---
# name: test_sensors[sensor.test_user_dailies-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_dailies',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dailies',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.DAILIES: 'dailys'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_dailys',
    'unit_of_measurement': 'tasks',
  })
# ---
# name: test_sensors[sensor.test_user_dailies-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '2c6d136c-a1c3-4bef-b7c4-fa980784b1e1': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 9, 22, 11, 44, 43, 774000, tzinfo=datetime.timezone.utc),
        'every_x': 1,
        'frequency': <Frequency.WEEKLY: 'weekly'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'is_due': True,
        'next_due': list([
          datetime.datetime(2024, 9, 24, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 27, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 28, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 10, 1, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 10, 4, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 10, 8, 22, 0, tzinfo=datetime.timezone.utc),
        ]),
        'notes': 'Ein einstündiges Workout im Fitnessstudio absolvieren.',
        'priority': <TaskPriority.HARD: 2>,
        'repeat': dict({
          'f': False,
          'm': False,
          's': True,
          'su': True,
          't': False,
          'th': False,
          'w': True,
        }),
        'start_date': datetime.datetime(2024, 9, 21, 22, 0, tzinfo=datetime.timezone.utc),
        'tags': list([
          UUID('51076966-2970-4b40-b6ba-d58c6a756dd7'),
        ]),
        'text': 'Fitnessstudio besuchen',
        'type': <TaskType.DAILY: 'daily'>,
        'yester_daily': True,
      }),
      '564b9ac9-c53d-4638-9e7f-1cd96fe19baa': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'completed': True,
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 268000, tzinfo=datetime.timezone.utc),
        'every_x': 1,
        'frequency': <Frequency.WEEKLY: 'weekly'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'is_due': True,
        'next_due': list([
          datetime.datetime(2024, 9, 23, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
          datetime.datetime(2024, 9, 24, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
          datetime.datetime(2024, 9, 25, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
          datetime.datetime(2024, 9, 26, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
          datetime.datetime(2024, 9, 27, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
          datetime.datetime(2024, 9, 28, 0, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200), 'GMT')),
        ]),
        'notes': 'Klicke um Änderungen zu machen!',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': True,
          'm': True,
          's': True,
          'su': True,
          't': True,
          'th': True,
          'w': True,
        }),
        'start_date': datetime.datetime(2024, 7, 6, 22, 0, tzinfo=datetime.timezone.utc),
        'streak': 1,
        'text': 'Zahnseide benutzen',
        'type': <TaskType.DAILY: 'daily'>,
        'value': -2.9663035443712333,
        'yester_daily': True,
      }),
      'f2c85972-1a19-4426-bc6d-ce3337b9d99f': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 266000, tzinfo=datetime.timezone.utc),
        'every_x': 1,
        'frequency': <Frequency.WEEKLY: 'weekly'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'is_due': True,
        'next_due': list([
          datetime.datetime(2024, 9, 22, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 23, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 24, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 25, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 26, 22, 0, tzinfo=datetime.timezone.utc),
          datetime.datetime(2024, 9, 27, 22, 0, tzinfo=datetime.timezone.utc),
        ]),
        'notes': 'Klicke um Deinen Terminplan festzulegen!',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': True,
          'm': True,
          's': True,
          'su': True,
          't': True,
          'th': True,
          'w': True,
        }),
        'start_date': datetime.datetime(2024, 7, 6, 22, 0, tzinfo=datetime.timezone.utc),
        'text': '5 Minuten ruhig durchatmen',
        'type': <TaskType.DAILY: 'daily'>,
        'value': -1.919611992979862,
        'yester_daily': True,
      }),
      'friendly_name': 'test-user Dailies',
      'unit_of_measurement': 'tasks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_dailies',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensors[sensor.test_user_display_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_display_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display name',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.DISPLAY_NAME: 'display_name'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_display_name',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_user_display_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Display name',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_display_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'test-user',
  })
# ---
# name: test_sensors[sensor.test_user_experience-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_experience',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Experience',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.EXPERIENCE: 'experience'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_experience',
    'unit_of_measurement': 'XP',
  })
# ---
# name: test_sensors[sensor.test_user_experience-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Experience',
      'unit_of_measurement': 'XP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_experience',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '737',
  })
# ---
# name: test_sensors[sensor.test_user_gems-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_gems',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gems',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.GEMS: 'gems'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_gems',
    'unit_of_measurement': 'gems',
  })
# ---
# name: test_sensors[sensor.test_user_gems-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Gems',
      'unit_of_measurement': 'gems',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_gems',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12.0',
  })
# ---
# name: test_sensors[sensor.test_user_gold-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_gold',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gold',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.GOLD: 'gold'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_gold',
    'unit_of_measurement': 'GP',
  })
# ---
# name: test_sensors[sensor.test_user_gold-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Gold',
      'unit_of_measurement': 'GP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_gold',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '137.625872146098',
  })
# ---
# name: test_sensors[sensor.test_user_habits-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_habits',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Habits',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.HABITS: 'habits'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_habits',
    'unit_of_measurement': 'tasks',
  })
# ---
# name: test_sensors[sensor.test_user_habits-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '1d147de6-5c02-4740-8e2f-71d3015a37f4': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 266000, tzinfo=datetime.timezone.utc),
        'frequency': <Frequency.DAILY: 'daily'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Eine kurze Pause machen',
        'type': <TaskType.HABIT: 'habit'>,
        'up': True,
      }),
      'bc1d1855-b2b8-4663-98ff-62e7b763dfc4': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 265000, tzinfo=datetime.timezone.utc),
        'down': True,
        'frequency': <Frequency.DAILY: 'daily'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Oder lösche es über die Bearbeitungs-Ansicht',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Klicke hier um dies als schlechte Gewohnheit zu markieren, die Du gerne loswerden möchtest',
        'type': <TaskType.HABIT: 'habit'>,
      }),
      'e97659e0-2c42-4599-a7bb-00282adc410d': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 264000, tzinfo=datetime.timezone.utc),
        'frequency': <Frequency.DAILY: 'daily'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Eine Gewohnheit, eine Tagesaufgabe oder ein To-Do',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Füge eine Aufgabe zu Habitica hinzu',
        'type': <TaskType.HABIT: 'habit'>,
        'up': True,
      }),
      'f21fa608-cfc6-4413-9fc7-0eb1b48ca43a': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 268000, tzinfo=datetime.timezone.utc),
        'down': True,
        'frequency': <Frequency.DAILY: 'daily'>,
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Gesundes Essen/Junkfood',
        'type': <TaskType.HABIT: 'habit'>,
        'up': True,
      }),
      'friendly_name': 'test-user Habits',
      'unit_of_measurement': 'tasks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_habits',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_sensors[sensor.test_user_health-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_health',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Health',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.HEALTH: 'health'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_health',
    'unit_of_measurement': 'HP',
  })
# ---
# name: test_sensors[sensor.test_user_health-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Health',
      'unit_of_measurement': 'HP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_health',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.test_user_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Level',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.LEVEL: 'level'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.test_user_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Level',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38',
  })
# ---
# name: test_sensors[sensor.test_user_mana-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_mana',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mana',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.MANA: 'mana'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_mana',
    'unit_of_measurement': 'MP',
  })
# ---
# name: test_sensors[sensor.test_user_mana-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Mana',
      'unit_of_measurement': 'MP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_mana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.9',
  })
# ---
# name: test_sensors[sensor.test_user_max_health-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_max_health',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Max. health',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.HEALTH_MAX: 'health_max'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_health_max',
    'unit_of_measurement': 'HP',
  })
# ---
# name: test_sensors[sensor.test_user_max_health-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Max. health',
      'unit_of_measurement': 'HP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_max_health',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensors[sensor.test_user_max_mana-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_max_mana',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Max. mana',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.MANA_MAX: 'mana_max'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_mana_max',
    'unit_of_measurement': 'MP',
  })
# ---
# name: test_sensors[sensor.test_user_max_mana-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Max. mana',
      'unit_of_measurement': 'MP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_max_mana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '166',
  })
# ---
# name: test_sensors[sensor.test_user_mystic_hourglasses-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_mystic_hourglasses',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 0,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mystic hourglasses',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.TRINKETS: 'trinkets'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_trinkets',
    'unit_of_measurement': '⧖',
  })
# ---
# name: test_sensors[sensor.test_user_mystic_hourglasses-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Mystic hourglasses',
      'unit_of_measurement': '⧖',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_mystic_hourglasses',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_sensors[sensor.test_user_next_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_next_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Next level',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.EXPERIENCE_MAX: 'experience_max'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_experience_max',
    'unit_of_measurement': 'XP',
  })
# ---
# name: test_sensors[sensor.test_user_next_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'test-user Next level',
      'unit_of_measurement': 'XP',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_next_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '880',
  })
# ---
# name: test_sensors[sensor.test_user_rewards-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_rewards',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rewards',
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.REWARDS: 'rewards'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_rewards',
    'unit_of_measurement': 'tasks',
  })
# ---
# name: test_sensors[sensor.test_user_rewards-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '5e2ea1df-f6e6-4ba3-bccb-97c5ec63e99b': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 7, 7, 17, 51, 53, 266000, tzinfo=datetime.timezone.utc),
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Schaue fern, spiele ein Spiel, gönne Dir einen Leckerbissen, es liegt ganz bei Dir!',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Belohne Dich selbst',
        'type': <TaskType.REWARD: 'reward'>,
        'value': 10.0,
      }),
      'friendly_name': 'test-user Rewards',
      'unit_of_measurement': 'tasks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_rewards',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.test_user_to_do_s-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_user_to_do_s',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': "To-Do's",
    'platform': 'habitica',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <HabitipySensorEntity.TODOS: 'todos'>,
    'unique_id': '00000000-0000-0000-0000-000000000000_todos',
    'unit_of_measurement': 'tasks',
  })
# ---
# name: test_sensors[sensor.test_user_to_do_s-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '1aa3137e-ef72-4d1f-91ee-41933602f438': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 9, 21, 22, 16, 38, 153000, tzinfo=datetime.timezone.utc),
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Rasen mähen und die Pflanzen gießen.',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Garten pflegen',
        'type': <TaskType.TODO: 'todo'>,
      }),
      '2f6fcabc-f670-4ec3-ba65-817e8deea490': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 9, 21, 22, 17, 19, 513000, tzinfo=datetime.timezone.utc),
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Strom- und Internetrechnungen rechtzeitig überweisen.',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Rechnungen bezahlen',
        'type': <TaskType.TODO: 'todo'>,
      }),
      '86ea2475-d1b5-4020-bdcc-c188c7996afa': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 9, 21, 22, 16, 16, 756000, tzinfo=datetime.timezone.utc),
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Den Ausflug für das kommende Wochenende organisieren.',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'tags': list([
          UUID('51076966-2970-4b40-b6ba-d58c6a756dd7'),
        ]),
        'text': 'Wochenendausflug planen',
        'type': <TaskType.TODO: 'todo'>,
      }),
      '88de7cd9-af2b-49ce-9afd-bf941d87336b': dict({
        'challenge': dict({
          'broken': None,
          'id': None,
          'shortName': None,
          'taskId': None,
          'winner': None,
        }),
        'created_at': datetime.datetime(2024, 9, 21, 22, 17, 57, 816000, tzinfo=datetime.timezone.utc),
        'group': dict({
          'assignedDate': None,
          'assignedUsers': list([
          ]),
          'assignedUsersDetail': dict({
          }),
          'assigningUsername': None,
          'completedBy': dict({
            'date': None,
            'userId': None,
          }),
          'id': None,
          'managerNotes': None,
          'taskId': None,
        }),
        'notes': 'Das Buch, das du angefangen hast, bis zum Wochenende fertig lesen.',
        'priority': <TaskPriority.EASY: 1>,
        'repeat': dict({
          'f': False,
          'm': True,
          's': False,
          'su': False,
          't': True,
          'th': False,
          'w': True,
        }),
        'text': 'Buch zu Ende lesen',
        'type': <TaskType.TODO: 'todo'>,
      }),
      'friendly_name': "test-user To-Do's",
      'unit_of_measurement': 'tasks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_user_to_do_s',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
